--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,17 @@
-font_size                10.0
-font_family              JetBrains Mono Medium Nerd Font Complete
-bold_font                JetBrains Mono Extra Bold Nerd Font Complete
-italic_font              JetBrains Mono Medium Italic Nerd Font Complete
-bold_italic_font         JetBrains Mono ExtBd Ita Nerd Font Complete
+# Recursive v1.084
+font_size                10.5
+font_family              Rec Mono Casual
+bold_font                Rec Mono Casual Bold
+italic_font              Rec Mono Casual Italic
+bold_italic_font         Rec Mono Casual Bold Italic
+adjust_line_height       1
+# JetBrainsMono v2.242 Patch Nerd Font v2.1.0
+# font_size                10.0
+# font_family              JetBrains Mono Medium Nerd Font Complete
+# bold_font                JetBrains Mono ExtraBold Nerd Font Complete
+# italic_font              JetBrains Mono Medium Italic Nerd Font Complete
+# bold_italic_font         JetBrains Mono ExtraBold Italic Nerd Font Complete
+# adjust_line_height       0
 disable_ligatures        never
                          
 remember_window_size     no
@@ -61,3 +70,5 @@ inactive_tab_background   #353a50
 tab_bar_background        #0f1117
 
 background_opacity        0.97
+
+clear_all_shortcuts       yes
