feat: remap `muhenkan` ➜ `escape`

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -64,3 +64,4 @@ cursor:
 
 key_bindings:
   - { key: Return, mods: Control|Shift, action: SpawnNewInstance }
+  - { key: 94, chars: "\x1b\x1b" } # Muhenkan ➜ Escape
