--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
-# Recursive v1.084
+# Recursive v1.085
 font_size                10.5
-font_family              Rec Mono Casual
-bold_font                Rec Mono Casual Bold
-italic_font              Rec Mono Casual Italic
-bold_italic_font         Rec Mono Casual Bold Italic
+font_family              Recursive Mn Csl St Med
+bold_font                Recursive Mn Csl St XBd
+italic_font              Recursive Mn Csl St Med Italic
+bold_italic_font         Recursive Mn Csl St XBd Italic
 adjust_line_height       1
 # JetBrainsMono v2.242 Patch Nerd Font v2.1.0
 # font_size                10.0
