feat(kitty): add keybindings like alacritty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -72,3 +72,12 @@ tab_bar_background        #0f1117
 background_opacity        0.97
 
 clear_all_shortcuts       yes
+## keybindings
+### basic
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
+### custom
+#### Muhenkan ➜ Escape
+map 0xff22 send_text all \x1b
+#### Hiragana Katakan ➜ Backslash
+map 0xff27 send_text all \x5c
