--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Recursive v1.085
 font_size                10.5
-font_family              Recursive Mn Csl St Med
-bold_font                Recursive Mn Csl St XBd
-italic_font              Recursive Mn Csl St Med Italic
-bold_italic_font         Recursive Mn Csl St XBd Italic
+font_family              Recursive Mono Csl St Medium Nerd Font Complete
+bold_font                Recursive Mono Csl St ExtraBold Italic Nerd Font Complete
+italic_font              Recursive Mono Csl St Medium Nerd Font Complete
+bold_italic_font         Recursive Mono Csl St ExtraBold Italic Nerd Font Complete
 adjust_line_height       1
 # JetBrainsMono v2.242 Patch Nerd Font v2.1.0
 # font_size                10.0
