--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,53 +21,43 @@ initial_window_height    24c
 window_resize_step_cells 2
 window_resize_step_lines 2
 
+background #1a1b26
+foreground #c0caf5
+selection_background #33467C
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
 
-background                #161821
-foreground                #c6c8d1
+# Tabs
+active_tab_background #7aa2f7
+active_tab_foreground #1f2335
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #15161E
 
-selection_background      #ffffff
-selection_foreground      #000000
+# normal
+color0 #15161E
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
 
-cursor                    #d2d4de
+# bright
+color8 #414868
+color9 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
 
-# black
-color0                    #161821
-color8                    #6b7089
-
-# red
-color1                    #e27878
-color9                    #e98989
-
-# green
-color2                    #b4be82
-color10                   #c0ca8e
-
-# yellow/orange
-color3                    #e2a478
-color11                   #e9b189
-
-# blue
-color4                    #84a0c6
-color12                   #91acd1
-
-# magenta/purple
-color5                    #a093c7
-color13                   #ada0d3
-
-# cyan
-color6                    #89b8c2
-color14                   #95c4ce
-
-# white
-color7                    #c6c8d1
-color15                   #d2d4de
-
-# tab bar
-active_tab_foreground     #161821
-active_tab_background     #84a0c6
-inactive_tab_foreground   #d2d4de
-inactive_tab_background   #353a50
-tab_bar_background        #0f1117
+# extended colors
+color16 #ff9e64
+color17 #db4b4b
 
 background_opacity        0.97
 
