feat(lazygit): change active color

--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -2,8 +2,7 @@ gui:
   showIcons: true
   theme:
     activeBorderColor:
-      - white
+      - yellow
       - bold
     inactiveBorderColor:
-      - black
-      - bold
+      - white
