--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,17 +1,17 @@
 # Recursive v1.085
-font_size                10.5
-font_family              Recursive Mono Csl St Medium Nerd Font Complete
-bold_font                Recursive Mono Csl St ExtraBold Italic Nerd Font Complete
-italic_font              Recursive Mono Csl St Medium Nerd Font Complete
-bold_italic_font         Recursive Mono Csl St ExtraBold Italic Nerd Font Complete
-adjust_line_height       1
+# font_size                10.5
+# font_family              Recursive Mono Csl St Medium Nerd Font Complete
+# bold_font                Recursive Mono Csl St ExtraBold Nerd Font Complete
+# italic_font              Recursive Mono Csl St Medium Nerd Italic Font Complete
+# bold_italic_font         Recursive Mono Csl St ExtraBold Italic Nerd Font Complete
+# adjust_line_height       1
 # JetBrainsMono v2.242 Patch Nerd Font v2.1.0
-# font_size                10.0
-# font_family              JetBrains Mono Medium Nerd Font Complete
-# bold_font                JetBrains Mono ExtraBold Nerd Font Complete
-# italic_font              JetBrains Mono Medium Italic Nerd Font Complete
-# bold_italic_font         JetBrains Mono ExtraBold Italic Nerd Font Complete
-# adjust_line_height       0
+font_size                10.0
+font_family              JetBrains Mono SemiBold Nerd Font Complete
+bold_font                JetBrains Mono ExtraBold Nerd Font Complete
+italic_font              JetBrains Mono SemiBold Italic Nerd Font Complete
+bold_italic_font         JetBrains Mono ExtraBold Italic Nerd Font Complete
+adjust_line_height       0
 disable_ligatures        never
                          
 remember_window_size     no
