feat(fonts): add font fallback `tabler-icons` for `Inter V`

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -13,4 +13,12 @@
     </edit>
   </match>
 
+  <!-- Font Fallback Tabler Icons-->
+  <alias>
+      <family>Inter V</family> 
+      <prefer>
+          <family>tabler-icons</family>
+      </prefer>
+  </alias>
+
 </fontconfig>
