--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -66,6 +66,8 @@ clear_all_shortcuts       yes
 ### basic
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
+### new window
+map ctrl+shift+enter new_os_window_with_cwd
 ### custom
 #### Muhenkan ➜ Escape
 map 0xff22 send_text all \x1b
