feat(fontconfig): add fallback `nerd font` to `jetbrains mono`

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -21,4 +21,12 @@
       </prefer>
   </alias>
 
+  <!-- Font Fallback JetBrains Mono With Nerd Font-->
+  <alias>
+      <family>JetBrains Mono</family> 
+      <prefer>
+          <family>Symbols Nerd Font</family>
+      </prefer>
+  </alias>
+
 </fontconfig>
