feat(kitty): change font to `jetbrains mono`

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,13 +7,44 @@
 # adjust_line_height       1
 # JetBrainsMono v2.242 Patch Nerd Font v2.3.0
 font_size                10.0
-font_family              JetBrains Mono Bold Nerd Font Complete
-bold_font                JetBrains Mono ExtraBold Nerd Font Complete
-italic_font              JetBrains Mono Bold Italic Nerd Font Complete
-bold_italic_font         JetBrains Mono ExtraBold Italic Nerd Font Complete
+font_family              JetBrains Mono Bold
+bold_font                JetBrains Mono ExtraBold
+italic_font              JetBrains Mono Bold Italic
+bold_italic_font         JetBrains Mono ExtraBold Italic
 adjust_line_height       0
 disable_ligatures        never
                          
+# Seti-UI + Custom
+symbol_map U+E5FA-U+E6AC Symbols Nerd Font
+# Devicons
+symbol_map U+E700-U+E7C5 Symbols Nerd Font
+# Font Awesome
+symbol_map U+F000-U+F2E0 Symbols Nerd Font
+# Font Awesome Extension
+symbol_map U+E200-U+E2A9 Symbols Nerd Font
+# Material Design Icons
+symbol_map U+F0001-U+F1AF0 Symbols Nerd Font
+# Weather
+symbol_map U+E300-U+E3E3 Symbols Nerd Font
+# Octicons
+symbol_map U+F400-U+F532,U+2665,U+26A1 Symbols Nerd Font
+# Powerline Symbols
+symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 Symbols Nerd Font
+# Powerline Extra Symbols
+symbol_map U+E0A3,U+E0B4-U+E0C8,U+E0CA,U+E0CC-U+E0D4 Symbols Nerd Font
+# IEC Power Symbols
+symbol_map U+23FB-U+23FE,U+2B58 Symbols Nerd Font
+# Font Logos
+symbol_map U+F300-U+F32F Symbols Nerd Font
+# Pomicons
+symbol_map U+E000-U+E00A Symbols Nerd Font
+# Codicons
+symbol_map U+EA60-U+EBEB Symbols Nerd Font
+# Heavy Angle Brackets
+symbol_map U+E276C-U+2771 Symbols Nerd Font
+# Box Drawing
+symbol_map U+2500-U+259F Symbols Nerd Font
+
 remember_window_size     no
 initial_window_width     80c
 initial_window_height    24c
