feat(kitty): add shortcut to change font size

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -97,6 +97,9 @@ clear_all_shortcuts       yes
 ### basic
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
+map ctrl+equal change_font_size all +1.0
+map ctrl+minus change_font_size all -1.0
+map ctrl+0 change_font_size all 0
 ### new window
 map ctrl+shift+enter new_os_window_with_cwd
 ### custom
