feat(alacritty): change opacity and font size

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -5,8 +5,11 @@ window:
   dimensions:
     columns: 80
     lines: 24
+  padding:
+    x: 4
+    y: 4
   dynamic_padding: true
-  opacity: 0.925
+  opacity: 0.98
 
 font:
   # Recursive v1.085 Patch Nerd Font v2.1.0
@@ -31,7 +34,25 @@ font:
     style: Bold Italic
   bold_italic:
     style: ExtraBold Italic
-  size: 10.0
+  size: 12.0
+  # normal:
+  #   family: Monaspace Neon Var
+  #   style: SemiBold
+  # bold:
+  #   style: Bold
+  # italic:
+  #   family: Monaspace Neon Var
+  #   style: SemiBold Italic
+  # bold_italic:
+  #   family: Monaspace Neon Var
+  #   style: Bold Italic
+  # size: 12.0
+  # offset:
+  #   x: 0
+  #   y: 3
+  # glyph_offset:
+  #   x: 0
+  #   y: 1
   builtin_box_drawing: true
 draw_bold_text_with_bright_colors: true
 
