feat(fontconfig): add JetBrainsMonoTabler

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -29,4 +29,12 @@
       </prefer>
   </alias>
 
+  <alias>
+      <family>JetBrainsMonoTabler</family>
+      <prefer>
+      <family>JetBrains Mono</family>
+      <family>tabler-icons</family>
+      </prefer>
+  </alias>
+
 </fontconfig>
