refactor(fontconfig): change `Inter V` to `Inter Variable`

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -15,7 +15,7 @@
 
   <!-- Font Fallback Tabler Icons-->
   <alias>
-      <family>Inter V</family> 
+      <family>Inter Variable</family> 
       <prefer>
           <family>tabler-icons</family>
       </prefer>
