refactor(kitty): change font size, opacity, and shortcut load config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,13 +6,14 @@
 # bold_italic_font         Recursive Mono Csl St ExtraBold Italic Nerd Font Complete
 # adjust_line_height       1
 # JetBrainsMono v2.242 Patch Nerd Font v2.3.0
-font_size                10.0
+font_size                12.0
 font_family              JetBrains Mono Bold
 bold_font                JetBrains Mono ExtraBold
 italic_font              JetBrains Mono Bold Italic
 bold_italic_font         JetBrains Mono ExtraBold Italic
 adjust_line_height       0
 disable_ligatures        never
+window_padding_width     3
                          
 # Seti-UI + Custom
 symbol_map U+E5FA-U+E6AC Symbols Nerd Font
@@ -90,7 +91,7 @@ color15 #c0caf5
 color16 #ff9e64
 color17 #db4b4b
 
-background_opacity        0.925
+background_opacity        0.975
 
 clear_all_shortcuts       yes
 ## keybindings
@@ -100,6 +101,7 @@ map ctrl+shift+v paste_from_clipboard
 map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 map ctrl+0 change_font_size all 0
+map ctrl+shift+f5 load_config_file
 ### new window
 map ctrl+shift+enter new_os_window_with_cwd
 ### custom
