--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -21,6 +21,7 @@ rounded-borders-exclude = [
 	"class_g = 'firefox' && (window_type *= 'utility' || window_type *= 'popup_menu') && argb",
 	"class_g = 'vlc' && (window_type *= 'utility' || window_type *= 'popup_menu' || window_type *= 'tooltip')",
 	"class_g = 'Spotify' && window_type *= 'tooltip'",
+  "_NET_WM_NAME@:s *= 'Emulator'",
 ];
 rounded-corners-exclude = [
   "window_type = 'dock' && class_g = 'eww-bar'",
@@ -30,10 +31,11 @@ rounded-corners-exclude = [
 	"class_g = 'firefox' && (window_type *= 'utility' || window_type *= 'popup_menu' || window_type *= 'tooltip') && argb",
 	"class_g = 'vlc' && (window_type *= 'utility' || window_type *= 'popup_menu' || window_type *= 'tooltip')",
 	"class_g = 'Spotify' && window_type *= 'tooltip'",
+  "_NET_WM_NAME@:s *= 'Emulator'",
 ];
 
 blur-method = "dual_kawase"
-blur-strength = 2;
+blur-strength = 4;
 blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
@@ -41,6 +43,7 @@ blur-background-exclude = [
 	"window_type = 'dnd'",
   "window_type = 'desktop'",
   "class_g *?= 'slop'",
+  "class_g = 'eww-bar'",
   "class_g = 'wired'",
   "class_g = 'firefox' && argb",
   "class_g = 'Brave-browser'",
@@ -49,6 +52,7 @@ blur-background-exclude = [
   "class_g = 'Thunar'",
   "class_g = 'vlc'",
   "class_g = 'Xfce4-screenshooter'",
+  "_NET_WM_NAME@:s *= 'Emulator'",
   "_GTK_FRAME_EXTENTS@:c",
 ];
 
@@ -60,10 +64,12 @@ shadow-offset-y = -18;
 shadow-exclude = [
 	"window_type = 'dnd'",
   "class_g *?= 'slop'",
+  "class_g = 'eww-bar'",
   "class_g = 'stalonetray'",
   "class_g = 'Xfce4-screenshooter'",
 	"class_g = 'firefox' && (window_type *= 'utility' || window_type *= 'popup_menu' || window_type *= 'tooltip') && argb",
 	"class_g = 'vlc' && (window_type *= 'utility' || window_type *= 'popup_menu' || window_type *= 'tooltip')",
+  "_NET_WM_NAME@:s *= 'Emulator'",
   "_GTK_FRAME_EXTENTS@:c",
 ];
 
