feat(tmux): key bind for reload config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,11 @@ set-option -as terminal-overrides ',xterm-256color:Tc'
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
+# Key Bindings
+
+## Reload Config
+bind-key F5 source-file ~/.tmux.conf
+
 # Status bar
 source-file ~/.tmux/themes/tokyonight/main
 
