refactor(tmux): move to script for lazygit popup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,4 +19,4 @@ bind-key F5 source-file ~/.tmux.conf
 source-file ~/.tmux/themes/tokyonight/main
 
 # Lazygit Popup
-run-shell '~/.tmux/plugins/lazygit/main'
+source-file ~/.tmux/plugins/lazygit/main
