--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -40,6 +40,7 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'popup'",
+  "window_type = 'menu'",
 	"window_type = 'dnd'",
   "window_type = 'desktop'",
   "class_g *?= 'slop'",
@@ -68,6 +69,7 @@ shadow-exclude = [
   "class_g = 'stalonetray'",
   "class_g = 'Xfce4-screenshooter'",
 	"class_g = 'firefox' && (window_type *= 'utility' || window_type *= 'popup_menu' || window_type *= 'tooltip') && argb",
+  "window_type = 'menu'",
 	"class_g = 'vlc' && (window_type *= 'utility' || window_type *= 'popup_menu' || window_type *= 'tooltip')",
   "_NET_WM_NAME@:s *= 'Emulator'",
   "_GTK_FRAME_EXTENTS@:c",
